Fix spacing for narrower screens

--- a/app/assets/stylesheets/header_styles.scss
+++ b/app/assets/stylesheets/header_styles.scss
@@ -3,6 +3,7 @@ header.header {
   margin: 0 160px;
   padding: 10px;
   font-weight: 700;
+  min-width: 800px;
 }
 
 div.positioned-options {
