--- a/app/assets/stylesheets/profile_styles.css
+++ b/app/assets/stylesheets/profile_styles.css
@@ -7,6 +7,7 @@ div.user-header {
   border: 2px solid blue;
   padding: 20px 20px 20px 20px;
   border-radius: 5px;
+  min-width: 740px;
 }
 
 div.user-header h1 {
