--- a/app/assets/stylesheets/recent_recipes.scss
+++ b/app/assets/stylesheets/recent_recipes.scss
@@ -4,6 +4,7 @@ div.recent-recipes {
   border-radius: 5px;
   font-weight: 700;
   font-size: 20px;
+  min-width: 780px;
 }
 
 div.recent-recipes ul {
